--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@naturalatlas/react-native-mapbox-gl",
   "description": "A Mapbox GL react native module for creating custom maps",
-  "version": "7.0.0-rc3",
+  "version": "7.0.1",
   "author": "React Native Mapbox Team",
   "main": "./javascript/index.js",
   "keywords": [
